// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render a confirmation alert with an icon 1`] = `
<div
  className="root type-confirmation css-qjfb1y0 css-1s43nw"
  style={Object {}}
>
  <i
    className="css-13vyqxr0 css-nemf5x"
    color="green"
    onClick={undefined}
    size={16}
    style={Object {}}
  >
    check_circle
  </i>
  <span
    className="css-oelz5t0 css-68cpdf"
    color="green"
    onClick={undefined}
    size="small"
    style={Object {}}
  >
    A confirmation alert
  </span>
</div>
`;

exports[`Alert should render a warning alert 1`] = `
<div
  className="root type-warning css-qjfb1y0 css-1s43nw"
  style={Object {}}
>
  <span
    className="css-oelz5t0 css-1ipmkpn"
    color="orange"
    onClick={undefined}
    size="small"
    style={Object {}}
  >
    A warning alert
  </span>
</div>
`;

exports[`Alert should render shallow component ok 1`] = `
<div
  className="root type-info css-qjfb1y0 css-1s43nw"
  style={Object {}}
>
  <span
    className="css-oelz5t0 css-9j79q6"
    color="blue"
    onClick={undefined}
    size="small"
    style={Object {}}
  >
    A info alert
  </span>
</div>
`;
